test/tests/stages/16_characters_and_strings/valid/extra_credit/promote_switch_cond.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(main)
  (
  void
  )
  {
  char
  identifier(c)
  =
  const int(100)
  ;
  switch
  (
  identifier(c)
  )
  {
  case
  const int(0)
  :
  return
  const int(1)
  ;
  case
  const int(100)
  :
  return
  const int(0)
  ;
  case
  const int(356)
  :
  return
  const int(2)
  ;
  default
  :
  return
  const int(3)
  ;
  }
  }
