test/tests/stages/16_characters_and_strings/invalid_parse/misplaced_char_literal.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  return
  identifier(a)
  const char('1')
  ;
  }
